fixed overflow

--- a/style/main.scss
+++ b/style/main.scss
@@ -384,6 +384,9 @@ h3 {
             flex-wrap: wrap;
             justify-content: center;
             padding-top: 50px;
+            img {
+                max-width: 100%;
+            }
         }
     }
     &__images {
